--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   cloud_firestore: ^5.6.12
-
+  flutter_markdown: ^0.7.0
+  cached_network_image: ^3.2.3
+  http: ^0.13.6
+  video_player: ^2.6.0
+  chewie: ^1.6.0
+  url_launcher: ^6.3.1
+  youtube_player_flutter: ^9.0.0
 
 
   # Firebase
