--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   chewie: ^1.6.0
   url_launcher: ^6.3.1
   youtube_player_flutter: ^9.0.0
-
+  uuid: ^4.0.0
 
   # Firebase
   firebase_core: ^3.6.0
