--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   url_launcher: ^6.3.1
   youtube_player_flutter: ^9.0.0
   uuid: ^4.0.0
+  cloud_functions: 5.6.2
 
   # Firebase
   firebase_core: ^3.6.0
