--- a/functions/package.json
+++ b/functions/package.json
@@ -5,10 +5,9 @@
   "engines": { "node": "18" },
   "dependencies": {
     "firebase-admin": "^11.0.0",
-    "firebase-functions": "^4.0.0",
-    "node-fetch": "^3.3.2"
+    "firebase-functions": "^4.0.0"
   },
   "scripts": {
-    "deploy": "firebase deploy --only \"functions:verifyLicenseKey\""
+    "deploy": "firebase deploy --only functions:preview"
   }
 }
